--- a/css/stylus.css
+++ b/css/stylus.css
@@ -24,3 +24,204 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+body {
+  margin: 0;
+  padding: 0;
+}
+.main-header__nav {
+  position: relative;
+  padding-bottom: 55px;
+}
+@media (min-width: 780px) {
+  .main-header__nav {
+    padding-bottom: 0;
+  }
+}
+.site-nav {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  font-family: "Pt-sans", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+}
+@media (min-width: 780px) {
+  .site-nav {
+    flex-direction: row;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 26px;
+  }
+}
+.site-nav__item {
+  min-height: 55px;
+  flex-basis: 0;
+  flex-grow: 1;
+  background-color: #81b3d2;
+  border-top: 1px solid #9ac2db;
+  border-bottom: 1px solid #678fa8;
+  list-style-type: none;
+}
+@media (min-width: 780px) {
+  .site-nav__item {
+    background-color: inherit;
+    border: 0;
+  }
+  .site-nav__item:nth-child(2) {
+    margin-right: 50px;
+  }
+  .site-nav__item:nth-child(3) {
+    margin-left: 50px;
+  }
+}
+.site-nav__link {
+  display: flex;
+  height: 100%;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+}
+.site-nav__link span {
+  margin: auto;
+}
+@media (min-width: 780px) {
+  .site-nav__link {
+    color: #000;
+  }
+}
+.main-header__nav-logo {
+  position: absolute;
+  left: calc(50% - 51px);
+}
+@media (min-width: 780px) {
+  .main-header__nav-logo {
+    top: 0;
+  }
+}
+.main-header__nav-open {
+  position: absolute;
+  left: auto;
+  right: 20px;
+  bottom: 17px;
+  width: 23px;
+  height: 21px;
+  background-image: url("../images/icon-menu.svg");
+  background-color: inherit;
+  background-size: cover;
+  border: 0;
+}
+@media (min-width: 780px) {
+  .main-header__nav-open {
+    display: none;
+  }
+}
+.main-header__logo {
+  height: 390px;
+}
+@media (min-width: 780px) {
+  .main-header__logo {
+    height: 520px;
+  }
+}
+.logo-wrapper {
+  display: flex;
+  background: url("../images/intro-triangle.svg") 50% 100% no-repeat, url("../images/back-desktop.jpg") 50% -40px no-repeat;
+}
+@media (min-width: 780px) {
+  .logo-wrapper {
+    background: url("../images/intro-triangle.svg") 50% 100% no-repeat, url("../images/back-desktop.jpg") 50% no-repeat;
+  }
+}
+.logo-wrapper__text-image {
+  margin: auto;
+  width: 282px;
+  height: 214px;
+}
+@media (min-width: 780px) {
+  .logo-wrapper__text-image {
+    width: 460px;
+    height: 350px;
+  }
+}
+.main {
+  padding-top: 50px;
+}
+.main-slogan {
+  display: block;
+  max-width: 490px;
+  margin: 0 auto;
+  font-family: "Pt-sans", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 28px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.main__reasons {
+  display: flex;
+  flex-direction: column;
+  margin-top: 35px;
+}
+.main__reasons-title {
+  display: block;
+  max-width: 490px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 45px;
+  font-family: "Pt-sans", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.main__reasons-list {
+  margin: 0;
+  padding: 0;
+}
+.main-reasons-list__item {
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  list-style-type: none;
+}
+.main-reasons-list__item .main-reasons-list__headline {
+  margin: 0;
+  font-family: "Pt-sans", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 27px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.main-reasons-list__item_city {
+  padding: 0;
+  background-color: #81b3d2;
+}
+@media (min-width: 780px) {
+  .main-reasons-list__item_city {
+    flex-direction: row;
+  }
+}
+.main-reasons-list__item_city-img {
+  width: 100%;
+}
+@media (min-width: 780px) {
+  .main-reasons-list__item_city-img {
+    width: 66%;
+  }
+}
+.main-reasons-list__item_city-wrapper {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+@media (min-width: 780px) {
+  .main-reasons-list__item_city-wrapper {
+    width: 34%;
+  }
+}
